--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit
-tensorflow-cpu==2.8.4
-numpy
-pillow
+tensorflow==2.12.0
+protobuf==3.20.*
 gdown
-matplotlib
-opencv-python
+numpy
+Pillow
